# scinexus

./: .gitignore  .hgignore  README.md  changelog.md  noxfile.py  pyproject.toml  rtd_get_docs.py  ruff.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  linters.yml  release.yml
docs/: conftest.py  index.md  install.md  llms.txt
docs/explanation/: app-lifecycle.md  customisation-hooks.md  data-store-model.md  flow.md  index.md  not-completed-design.md  source-tracking.md  type-system.md  why-composable-apps.md
docs/howto/: customise-display-and-ids.md  extend-type-checking.md  handle-failures.md  index.md  log-and-cite.md  migrate-from-cogent3.md  read-and-write-files.md  run-in-parallel.md  track-progress.md  use-data-stores.md  write-a-class-app.md  write-a-function-app.md
docs/reference/: app-classes.md  data-stores.md  define-app.md  deserialise.md  index.md  io-util.md  not-completed.md  parallel.md  progress.md  source-proxy.md  utilities.md
docs/scripts/: cog_utils.py
docs/stylesheets/: extra.css
docs/tutorials/: composing-apps.md  index.md  processing-a-dataset.md
scripts/: run_mypy_cov.py
src/scinexus/: __init__.py  _mypy_plugin.py  _version.py  composable.py  data_store.py  deserialise.py  io.py  io_util.py  misc.py  parallel.py  progress.py  progress_display.py  sqlite_data_store.py  typing.py  warning.py
tests/: conftest.py  test_composable.py  test_data_store.py  test_deserialise.py  test_init.py  test_io.py  test_io_util.py  test_misc.py  test_mypy_typing.py  test_parallel.py  test_parallel_mpi.py  test_progress.py  test_sqlite_data_store.py  test_typing.py  test_warning.py
tests/data/: sample.tsv
