[project]
name = "scinexus"
dynamic = ["version"]
description = "A composable app infrastructure for scientific computing"
requires-python = ">=3.11"
license = "BSD-3-Clause"
readme = "README.md"
readme_renderer = "markdown"
dependencies = [
    "charset_normalizer",
    "citeable",
    "scitrack",
    "tqdm",
    "typeguard",
    "loky",
]

[project.optional-dependencies]
mpi = ["mpi4py"]
rich = ["rich"]

[dependency-groups]
dev = ["zensical>=0.0.32"]
test = [
    "cogent3>=2026.3.23a0",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "mypy",
    "nox",
    "numpy",
    "rich",
    "ruff",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "scinexus"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "mpi: marks tests requiring MPI (run with nox -s testmpi)",
    "internet: marks tests requiring internet access",
    "cogent3: marks tests requiring the cogent3 package",
]
testpaths = ["tests"]

[tool.mypy]
plugins = ["scinexus._mypy_plugin"]
