[project]
name = "scinexus"
dynamic = ["version"]
description = "A composable app infrastructure for scientific computing"
requires-python = ">=3.11"
license = "BSD-3-Clause"
readme = "README.md"
readme_renderer = "markdown"
dependencies = [
    "charset_normalizer",
    "citeable",
    "scitrack",
    "tqdm",
    "typeguard",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Documentation = "https://scinexus.readthedocs.io"
"Bug Tracker" = "https://github.com/cogent3/scinexus/issues"
"Source Code" = "https://github.com/cogent3/scinexus/"

[project.optional-dependencies]
loky = ["loky"]
mpi = ["mpi4py"]
rich = ["rich"]

[dependency-groups]
test = [
    "pymdown-extensions>=10.21.2",
    "zensical>=0.0.33",
    "cogent3>=2026.4.20a0",
    "pytest",
    "pytest-cov",
    "pytest-markdown-docs",
    "pytest-xdist",
    "mypy",
    "nox",
    "numpy",
    "rich",
    "ruff",
    "cogapp>=3.6.0",
    "click>=8.3.2",
    "mkdocstrings-python>=2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/scinexus/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/scinexus"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "mpi: marks tests requiring MPI (run with nox -s testmpi)",
    "internet: marks tests requiring internet access",
    "cogent3: marks tests requiring the cogent3 package",
]
testpaths = ["tests"]

[tool.mypy]
plugins = ["scinexus._mypy_plugin"]
